--- a/app/src/styles/styles.scss
+++ b/app/src/styles/styles.scss
@@ -11,4 +11,4 @@
 @import "./modules/weather-search";
 @import "./modules/weather-data";
 @import "./modules/error";
-@import "./modules/_footer";
+// @import "./modules/_footer";
