--- a/app/src/App.css
+++ b/app/src/App.css
@@ -13,6 +13,7 @@
   }
 }
 
+/* Using here BEM naming methodology. */
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -22,6 +23,7 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  margin-bottom: 20px;
 }
 
 .App-link {
@@ -35,4 +37,32 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+/* .nav-link { 
+  color: rgb(209, 206, 206) !important;
+} */   /* Can overwrite menu text colors */
+
+.body-footer {
+  margin-bottom: 65px;
+}
+
+.header {
+  height: 60px;   /* Header height */
+  font-size: 120%;
+}
+
+.footer {
+  position: fixed;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 60px;   /* Footer height */
+  line-height: 40px;  /* Text postition in footer */
+  background-color: black;
+  font-size: 120%;
+  color: white;
+  text-align: center;
+  /* margin-bottom: 0px; */
 }
