--- a/app/src/index.css
+++ b/app/src/index.css
@@ -1,3 +1,4 @@
+/* Basic styles of the main page */
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
