--- a/app/src/styles/modules/_main.scss
+++ b/app/src/styles/modules/_main.scss
@@ -1,6 +1,7 @@
 .main {
   height: 75vh;
   box-shadow: 0px 13px 40px -13px rgba(0,0,0,0.75);
+  // height: 80%;  //new here
   width: 50%;
   margin: 0 auto;
   position: absolute;
