--- a/app/src/styles/modules/_weather-search.scss
+++ b/app/src/styles/modules/_weather-search.scss
@@ -38,7 +38,7 @@
     padding: 1.2rem;
     color: $colour-2;
     position: absolute;
-    top: 50%;
+    top: 20%;  //50%; was before
     left: 50%;
     transform: translate(-50%, -50%);
     &:focus {
